fix(SEO): compliance with colour contrasts and tags

--- a/ambiance-paysage-app/assets/styles/about.css
+++ b/ambiance-paysage-app/assets/styles/about.css
@@ -7,7 +7,7 @@
     background-color: transparent;
     font-size: 1.5rem;
     border: 2px solid var(--brown);
-    color: var(--brown);
+    color: var(--black);
     padding: 7px 35px;
     margin: 20px 2px;
     font-size: bold;
