--- a/ambiance-paysage-app/assets/styles/gallery.css
+++ b/ambiance-paysage-app/assets/styles/gallery.css
@@ -42,7 +42,7 @@
     background-color: transparent;
     font-size: 1rem;
     border: 2px solid var(--brown);
-    color: var(--brown);
+    color: var(--black);
     padding: 10px 20px;
     margin: 20px 2px;
     font-size: bold;
